- Bugfix for Constants

--- a/app/views/profile/index.scala.html
+++ b/app/views/profile/index.scala.html
@@ -6,6 +6,8 @@
         tab5: String,
         recipeBoxes: Option[List[models.viewmodels.RecipeBox]] = None,
         myReviewBoxes: Option[List[models.viewmodels.ReviewBox]] = None,
+        myRecipeReviewBoxes: Option[List[models.viewmodels.ReviewBox]] = None,
+        reviewBoxesAboutMyFood: Option[List[models.viewmodels.ReviewBox]] = None,
         reviewBoxesAboutMe: Option[List[models.viewmodels.ReviewBox]] = None,
         tagList: Option[List[models.profile.TagWord]] = None,
         isThisMyProfile: Boolean = false)(implicit request: RequestHeader, flash: Flash)
@@ -235,19 +237,55 @@
                                 Tab2
                             </div>
                             <div class="tab-pane tab-hdc fade" id="@tab3">
-                                <!-- Reviews -->
                                 @if(reviewBoxesAboutMe.nonEmpty){
+                                    <!-- Reviews about user -->
                                     <div class="row">
-                                        <div class="col-xs-12"><h3>@Messages("profile.reviews.reviews.aboutme.header")</h3></div>
+                                        <div class="col-xs-12">
+                                            <h3>
+                                            @if(isThisMyProfile) {
+                                                @Messages("profile.reviews.reviews.aboutme.header")
+                                            }else {
+                                                @Messages("profile.reviews.reviews.aboutme.username.header", userProfile.getOwner.firstName)
+                                            }
+                                            </h3>
+                                        </div>
                                         @shared.reviewBox(reviewBoxesAboutMe.get)
                                     </div>
                                 }
-                                @if(myReviewBoxes.nonEmpty){
+                                @if(reviewBoxesAboutMyFood.nonEmpty){
+                                    <!-- Reviews about his recipes -->
+                                    <div class="row">
+                                        <div class="col-xs-12 big-margin-top">
+                                            <h3>
+                                                @if(isThisMyProfile) {
+                                                    @Messages("profile.reviews.reviews.aboutmyfood.header")
+                                                }else {
+                                                    @Messages("profile.reviews.reviews.aboutmyfood.username.header", userProfile.getOwner.firstName)
+                                                }
+                                            </h3>
+                                        </div>
+                                        @shared.reviewBox(reviewBoxesAboutMyFood.get)
+                                    </div>
+                                }
+
+                                @if((myReviewBoxes.nonEmpty || myRecipeReviewBoxes.nonEmpty) && isThisMyProfile) {
+                                    <hr class="hr-orange big-margin-top">
+                                }
+                                @if(myReviewBoxes.nonEmpty && isThisMyProfile){
+                                    <!-- Reviews by me -->
                                     <div class="row big-margin-top">
                                         <div class="col-xs-12"><h3>@Messages("profile.reviews.myreviews.user.header")</h3></div>
                                         @shared.reviewBox(myReviewBoxes.get)
                                     </div>
                                 }
+                                @if(myRecipeReviewBoxes.nonEmpty && isThisMyProfile){
+                                    <!-- Food-Reviews by me -->
+                                    <div class="row big-margin-top">
+                                        <div class="col-xs-12"><h3>@Messages("profile.reviews.myreviews.food.header")</h3></div>
+                                        @shared.reviewBox(myRecipeReviewBoxes.get)
+                                    </div>
+                                }
+
                             </div>
                             <div class="tab-pane tab-hdc fade" id="@tab4">
                                 @if(isThisMyProfile && userProfile.getOwner.getMessages.nonEmpty) {
