You must allways be gust. You do not have do be host it is an option

--- a/app/views/profile/skapa.scala.html
+++ b/app/views/profile/skapa.scala.html
@@ -91,8 +91,8 @@
 
 
                             <!-- Gäst och värd -->
-                            <br>Gäst<input type="checkbox" name="roleGuest" value="GÄST" @profileOpts.isroleGuest>
-                            <br>Värd<input type="checkbox" name="roleHost" value="VÄRD" @profileOpts.isroleHost>
+
+                            <br>Jag vill vara värd &nbsp; <input type="checkbox" name="roleHost" value="VÄRD" @profileOpts.isroleHost>
 
                             <!-- Gäst och värd -->
 
