Childfriendly with Ja/Nej not JA/NEJ

--- a/app/views/profile/skapa.scala.html
+++ b/app/views/profile/skapa.scala.html
@@ -167,7 +167,7 @@
                             <!--  New input -->
                             @helper.inputRadioGroup(
                                 EnvDataForm("childFfriendly"),
-                                options = helper.options("JA"->"JA","NEJ"->"NEJ"),
+                                options = helper.options("Ja"->"Ja","Nej"->"Nej"),
                                 '_label -> "Barnvänligt"
                             )
 
