Number of guests in an interval from  min to max

--- a/app/views/profile/index.scala.html
+++ b/app/views/profile/index.scala.html
@@ -194,7 +194,7 @@
                                 <br><strong>Rökare :</strong> @userProfile.smoke
                                 <br><strong>Alkohol :</strong> @userProfile.allkoholServing
                                 <br><strong>Betalning  :</strong> @userProfile.payBankCard @userProfile.payCache @userProfile.payIZettle @userProfile.paySwish
-                                <br><strong>Antal gäster :</strong> @userProfile.maxNoOfGuest
+                                <br><strong>Antal gäster :</strong> @userProfile.minNoOfGuest - @userProfile.maxNoOfGuest
 
 
                             </div>
