--- a/app/views/profile/skapa.scala.html
+++ b/app/views/profile/skapa.scala.html
@@ -1,5 +1,6 @@
 @(EnvDataForm: Form[controllers.EnvData],
         profileOpts : controllers.UserProfileOptValues,
+        element: List[Type], klass: Types,
         optionsLocationAreas: Option[Seq[(String,String)]] = None,
         editingProfile: Option[UserProfile] = None,
         termsAndConditions: Option[models.content.ContentPage] = None)(implicit request: RequestHeader, flash: Flash = Flash.emptyCookie)
@@ -222,8 +223,17 @@
                             }
                             </select>
 
-                                <!-- New input -->
+                           <!-- New input -->
 
+                           <!-- Tags -->
+                            <br>
+                            @for(t <- element) {
+                                <input type="checkbox" id="@t.name" name="@t.v" value="@t.name" @klass.getString(t.name)>
+                                &nbsp;
+                                <label for="@t.name" class="notbold">@t.name</label><br>
+                            }
+
+                           <!-- Tags -->
 
 
                             @if(!optionsLocationAreas.isEmpty) {
