- Performance fixes - Ratings and Likes repositorys

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -183,9 +183,9 @@ img
 }
 .alert-info
 {
-  color: darken(@alert-info, 70%);
-  border-color:darken(@alert-info, 10%);
-  background-color:@alert-info;
+  color: @hdc-dark-gray;
+  border-color:@hdc-gray;
+  background-color:@hdc-light-gray;
 }
 .alert-warning
 {
