--- a/app/views/host/replyGuest.scala.html
+++ b/app/views/host/replyGuest.scala.html
@@ -90,8 +90,8 @@
                                     <table>
                                         <tbody>
                                             <tr>
-                                                <td>
-                                                    <strong>@Messages("mails.inbox.header.original") : </strong>
+                                                <td class="col110">
+                                                    <strong>@Messages("mails.inbox.header.message") : </strong>
                                                 </td>
                                                 <td>
                                                     @message.response.request
