Paging on recipes via webserivce

--- a/app/views/profile/index.scala.html
+++ b/app/views/profile/index.scala.html
@@ -233,7 +233,7 @@
                                 </div>
                                 @if(recipeBoxes.nonEmpty){
                                     <div class="row">
-                                        @recipe.recipeBox(recipeBoxes.get)
+                                        @recipe.recipeBox(recipeBoxes.get, userProfile.profileLinkName)
                                     </div>
                                 }
                             </div>
