--- a/app/views/recipe/recipeBox.scala.html
+++ b/app/views/recipe/recipeBox.scala.html
@@ -1,5 +1,117 @@
-@(boxes: List[models.viewmodels.RecipeBox] = Nil)
+@(boxes: List[models.viewmodels.RecipeBox] = Nil, profileName: String)
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
+
+
+<script>
+$(document).ready(function(){
+ alert(' Ladda sida 5....@profileName ');
+
+
+
+<!-- get defualt page -->
+
+    var map = 0;
+
+    var myArr = [];
+
+$.getJSON('/recipe/json/recipeListJson?profileName=@profileName&recipeName=test&page=' + map + '&tid=' + Date(), function(data){
+var antal = 0;
+
+    var t = "<table>";
+    myArr.push(t)
+    $.each(data,function(key,value) {
+        antal = antal + 1;
+        console.log(value.name)
+       var s =  myArr.push("<tr>" + "<td>" + value.name + "</td><td>" + value.preAmble + "</td>" + value.recipeRating + "<tr>")
+       myArr.push(s)
+    })
+    myArr.push("</table>")
+
+        if(antal > 0) {
+        $('#recipeList').html(myArr.join(''))
+        }
+
+    })
+
+    <!-- OnClick button -->
+
+        $("#resultNext").click(function(){
+        var myArr = [];
+
+
+        $.getJSON('/recipe/json/recipeListJson?profileName=@profileName&recipeName=test&page=' + (map+1) + '&tid=' + Date(), function(data){
+
+        var antal = 0;
+
+
+        $.each(data,function(key,value) {
+        antal = antal + 1;
+        console.log(value.name)
+        /*
+        var l = "<a href="linktoRecipe" class='link-recipe-panel'>";
+        l = l + "<div class="thumbnail panel-recipe hover-green-dropshadow">";
+        l = l + "<div class='body'>";
+        l = l + "<h2>" + value.name + "</h2>";
+        l = l + "<div class="preamble">" + value.preAmble"+ </div>";
+        l = l + "<button onclick='linkToRecipe' ";
+        l = l + "class='btn btn-primary btn-xs btn-link-to-recipe pull-right'>Visa recept</button>";
+        l = l + "</div></div></a>";
+        */
+        myArr.push("<br>" + value.name + ", " + value.preAmble + ", " + value.recipeRating)
+        })
+
+        if(antal > 0) {
+        map = map + 1;
+        $('#recipeList').html(myArr.join(''))
+        }
+
+
+        })
+        });
+
+
+        <!-- Previous -->
+        $("#resultPrev").click(function(){
+        var myArr = [];
+
+
+        $.getJSON('/recipe/json/recipeListJson?profileName=@profileName&recipeName=test&page=' + (map-1) + '&tid=' + Date(), function(data){
+
+        var antal = 0;
+
+        $.each(data,function(key,value) {
+        antal = antal + 1;
+        console.log(value.name)
+        myArr.push("<br>" + value.name + ", " + value.preAmble + ", " + value.recipeRating)
+        })
+
+        if(antal > 0) {
+        map = map -1;
+        $('#recipeList').html(myArr.join(''))
+        }
+        })
+        });
+        });
+
+
+    <!-- Onclick button -->
+
+
+
+
+</script>
+
+<br>
+<button id="resultPrev">bakåt</button>
+<button id="resultNext">framåt</button>
+<hr>
+<div id="recipeList">
+
+</div>
+
+
+<!--
 @if(!boxes.isEmpty) {
     @for((box: models.viewmodels.RecipeBox,i) <- boxes.zipWithIndex){
         <div class="col-xs-12 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-0 col-recipe-boxes">
@@ -16,3 +128,4 @@
         </div>
     }
 }
+-->
