--- a/app/views/recipe/recipeBox.scala.html
+++ b/app/views/recipe/recipeBox.scala.html
@@ -15,18 +15,34 @@ $(document).ready(function(){
 $.getJSON('/recipe/json/recipeListJson?profileName=@profileName&recipeName=test&page=' + map + '&tid=' + Date(), function(data){
 var antal = 0;
 
-    var t = "<table>";
-    myArr.push(t)
+
+
+   myArr.push("<table>");
     $.each(data,function(key,value) {
         antal = antal + 1;
-        console.log(value.name)
-       var s =  myArr.push("<tr>" + "<td>" + value.name + "</td><td>" + value.preAmble + "</td>" + value.recipeRating + "<tr>")
-       myArr.push(s)
+    var l = "";
+    if(antal == 1){
+        l = l + "<tr>";
+    }
+    l = l + "<td width='30%'><a href='linktoRecipe' class='link-recipe-panel'>";
+    l = l + "<div class='thumbnail panel-recipe hover-green-dropshadow'>";
+    l = l + "<div class='body'>";
+    l = l + "<h2>" + value.name + "</h2>";
+    l = l + "<div class='preamble'>" + value.preAmble + "</div>";
+    l = l + "<button onclick='linkToRecipe' ";
+    l = l + "class='btn btn-primary btn-xs btn-link-to-recipe pull-right'>Visa recept</button>";
+    l = l + "</div></div>";
+    l = l + "</a><td>";
+
+    if(antal == 3) {
+        l = l + "</tr>";
+    }
+       myArr.push(l);
     })
-    myArr.push("</table>")
 
         if(antal > 0) {
-        $('#recipeList').html(myArr.join(''))
+        $('#recipeList').html(myArr.join(''));
+        $('#recipeList').append('</table>');
         }
 
     })
@@ -41,31 +57,43 @@ var antal = 0;
 
         var antal = 0;
 
-
+        myArr.push("<table>");
         $.each(data,function(key,value) {
         antal = antal + 1;
-        console.log(value.name)
-        /*
-        var l = "<a href="linktoRecipe" class='link-recipe-panel'>";
-        l = l + "<div class="thumbnail panel-recipe hover-green-dropshadow">";
+        var l = "";
+        if(antal == 1){
+        l = l + "<tr>";
+        }
+        l = l + "<td width='30%'><a href='linktoRecipe' class='link-recipe-panel'>";
+        l = l + "<div class='thumbnail panel-recipe hover-green-dropshadow'>";
         l = l + "<div class='body'>";
         l = l + "<h2>" + value.name + "</h2>";
-        l = l + "<div class="preamble">" + value.preAmble"+ </div>";
+        l = l + "<div class='preamble'>" + value.preAmble + "</div>";
         l = l + "<button onclick='linkToRecipe' ";
         l = l + "class='btn btn-primary btn-xs btn-link-to-recipe pull-right'>Visa recept</button>";
-        l = l + "</div></div></a>";
-        */
-        myArr.push("<br>" + value.name + ", " + value.preAmble + ", " + value.recipeRating)
+        l = l + "</div></div>";
+        l = l + "</a><td>";
+
+        if(antal == 3) {
+        l = l + "</tr>";
+        }
+        myArr.push(l);
         })
 
         if(antal > 0) {
-        map = map + 1;
-        $('#recipeList').html(myArr.join(''))
+            map = map + 1;
+            $('#recipeList').html(myArr.join(''));
+            $('#recipeList').append('</table>');
         }
 
 
         })
         });
+
+
+
+
+
 
 
         <!-- Previous -->
@@ -77,17 +105,39 @@ var antal = 0;
 
         var antal = 0;
 
+        myArr.push("<table width='100%'>");
         $.each(data,function(key,value) {
         antal = antal + 1;
-        console.log(value.name)
-        myArr.push("<br>" + value.name + ", " + value.preAmble + ", " + value.recipeRating)
+        var l = "";
+        if(antal == 1){
+        l = l + "<tr>";
+        }
+        l = l + "<td width='30%'><a href='linktoRecipe' class='link-recipe-panel'>";
+        l = l + "<div class='thumbnail panel-recipe hover-green-dropshadow'>";
+        l = l + "<div class='body'>";
+        l = l + "<h2>" + value.name + "</h2>";
+        l = l + "<div class='preamble'>" + value.preAmble + "</div>";
+        l = l + "<button onclick='linkToRecipe' ";
+        l = l + "class='btn btn-primary btn-xs btn-link-to-recipe pull-right'>Visa recept</button>";
+        l = l + "</div></div>";
+        l = l + "</a><td>";
+
+        if(antal == 3) {
+        l = l + "</tr>";
+        }
+        myArr.push(l);
         })
 
+
         if(antal > 0) {
-        map = map -1;
-        $('#recipeList').html(myArr.join(''))
+        map = map - 1;
+        $('#recipeList').html(myArr.join(''));
+        $('#recipeList').append('</table>');
         }
+
+
         })
+
         });
         });
 
@@ -100,10 +150,10 @@ var antal = 0;
 </script>
 
 <br>
-<button id="resultPrev">bakåt</button>
-<button id="resultNext">framåt</button>
-<hr>
-<div id="recipeList">
+<button id="resultPrev" class="btn btn-primary btn-xs btn-link-to-recipe pull-right">bakåt</button>
+<button id="resultNext" class="btn btn-primary btn-xs btn-link-to-recipe pull-right">framåt</button>
+<br>
+<div id="recipeList" class="col-xs-12 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-0 col-recipe-boxes">
 
 </div>
 
