more properties in profile

--- a/app/views/profile/skapa.scala.html
+++ b/app/views/profile/skapa.scala.html
@@ -220,10 +220,10 @@
 
 
                             Betalning
-                            <br>Kontanter<input type="checkbox" name="payCache" value="Kontanter" @profileOpts.ispayCache>
-                            <br>Swish<input type="checkbox" name="paySwish" value="Swish" @profileOpts.ispaySwish>
-                            <br>Banköverföring<input type="checkbox" name="payBankCard" value="Banköverföring" @profileOpts.ispayBankCard>
-                            <br>IZettle<input type="checkbox" name="payIZettle" value="IZettle" @profileOpts.ispayIZettle>
+                            <br>@Messages("profile.payment.cash")&nbsp;<input type="checkbox" name="payCache" value="Kontanter" @profileOpts.ispayCache>
+                            <br>@Messages("profile.payment.Swish")&nbsp;<input type="checkbox" name="paySwish" value="Swish" @profileOpts.ispaySwish>
+                            <br>@Messages("profile.payment.banktransfer")&nbsp;<input type="checkbox" name="payBankCard" value="Banköverföring" @profileOpts.ispayBankCard>
+                            <br>@Messages("profile.payment.izettle")&nbsp;<input type="checkbox" name="payIZettle" value="IZettle" @profileOpts.ispayIZettle>
 
 
 
