--- a/app/views/mainedit.scala.html
+++ b/app/views/mainedit.scala.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <script src="@routes.Assets.at("js/libs/jquery.1.11.1.min.js")"></script>
         <link rel="stylesheet" href="@routes.Assets.at("bootstrap/css/bootstrap.min.css")" />
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.min.css")">
         <link rel="shortcut icon" href="@routes.Assets.at("images/favicon.ico")">
@@ -42,10 +42,10 @@
         @footerHtml
 
         @*TODO - Create controllers with local backups, also bundle *@
-        <script src="@routes.Assets.at("js/libs/jquery.1.11.1.min.js")"></script>
         <script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")"></script>
         <script src="@routes.Assets.at("tinymce/tinymce.min.js")"></script>
         <script src="@routes.Assets.at("js/libs/jquery.gray.min.js")"></script>
+        <script src="@routes.Assets.at("js/libs/jquery.collapser.2.0.min.js")"></script>
         <script src="@routes.Assets.at("js/libs/star-rating.2.0.0.min.js")"></script>
         <script src="@routes.Assets.at("js/libs/bootbox.4.3.0.min.js")"></script>
         @views.html.file.fileScripts()
