--- a/app/views/admin/recipe/list.scala.html
+++ b/app/views/admin/recipe/list.scala.html
@@ -20,7 +20,7 @@
             <tbody>
             @for(recipe <- recipeList) {
                 <tr>
-                    <td>@recipe.getOwnerProfile.getOwner.fullName</td>
+                    <td>@recipe.getOwnerProfile.getOwner.getFullName</td>
                     <td>@recipe.getName</td>
                     <td><small>@recipe.getLink</small></td>
                     <td>
